I'm on Windows 10 on the latest 4.0.0 Nightly build, i've tried with both avi and mkv files. It does not seem to happen to audio files (mp3, flac).
Whenever after i pause the video and resume it, the audio stutters and it sounds like there's static. It doesn't happen if i quickly pause/unpause, only if i pause more than whatever X amount of time (like a few 100 ms).
The audio fixes itself again if i click the timeline or use keyboard shortcuts to skip forwards/backwards in the movie.
I recorded a video to show what happens:
https://www.youtube.com/watch?v=gk2v4EKhBW4
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Um i upgraded to
"vlc-4.0.0-20180103-0504-dev-win64.exe"
And it stopped happening, it doesn't even glitch out anymore even if i go back to
"vlc-4.0.0-20180101-0506-dev-win64.exe"
or
"vlc-4.0.0-20180102-0506-dev-win64.exe"
which are the 2 versions it happened on.
So i can't get a debug file on the glitch now cause it won't happen anymore
New discovery:
The glitch only seem to happen if i open VLC while the headphones are plugged in to the port in the front of the computer. But when i unplug the headphones it keeps happening on the speakers plugged into the back of the computer as well.
If i open VLC with only the speakers plugged in to the back of the computer it doesn't happen.
But on VLC Nightly 3.0.0 and 4.0.0 i can't switch from speakers to headphones without reopening VLC. On VLC 2.2.X i can plugin headphones while VLC is open and it'll switch automatically from speakers to headphones.
Oh yea, they show up there now. Earlier in whatever Nightly 3.0.0 build i was using my headphones wouldn't show up in the list, so i had to restart VLC to change. But how come it doesn't just change automatically?
So the glitch starts happening as soon as any video starts playing while audio output is set to the computers front panel apparently, and then continues even on other outputs until i restart VLC. Can you reproduce it on your own? Or do you need me to get you some more logs? If so, could you tell me what you want me to do while logging? Like plug in/out headphones, stop/start playing a file, change audio output and whatnot.
to my understanding, it seems in your case the pts is saved before pause then reused when unpausing, and work with different pts.
You need to trace timestamps to understand what goes wrong.
But isn't pts some kind of absolute time value, at least that's what it looks like to me. And in this case continuing to use the value from before the pause doesn't make sense to me.
So... I'm experiencing the same issue with sound stuttering, but I don't understand the fix. Could somebody please explain what to do to fix this problem?