spatialaudio: reset PTS after a pause

This fixes stuffer on pause/unpause

Fixes #19406

(cherry picked from commit 1f246d2604822174812a2cab63111d95ad6ea27a)
Signed-off-by: Thomas Guillem <thomas@gllm.fr>